k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress
  namespace: hr-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: hr.localtest.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hr-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hr-frontend
                port:
                  number: 80
